Fix button style on mobile devices

--- a/assets/css/pages/login.scss
+++ b/assets/css/pages/login.scss
@@ -111,6 +111,10 @@ input[type=button], input[type=submit], input[type=reset]  {
   -ms-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  @media screen and (max-width: 425px) {
+    width: 85%;
+    padding: 15px 32px;
+  }
 }
 
 input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
